--- a/package.json
+++ b/package.json
@@ -13,17 +13,34 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.7.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/axios": "^0.14.0",
     "@types/leaflet": "^1.9.20",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-hook-form": "^7.49.3",
+    "@types/react-hot-toast": "^2.4.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
