--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "mysql2": "^3.15.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.3.1",
